--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".choose"></activity>
+        <activity android:name=".textUpload"></activity>
+        <activity android:name=".choose" />
         <activity android:name=".insurance" />
         <activity android:name=".upload" />
         <activity android:name=".MainActivity">
