--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.emergency">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    android:usesCleartextTraffic="true"
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Confirmed"></activity>
+        <activity android:name=".DriveUpload"></activity>
+        <activity android:name=".Confirmed" />
         <activity android:name=".settings" />
         <activity android:name=".Scan" />
         <activity android:name=".textUpload" />
